--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.581 2023/08/21 12:54:04 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.582 2023/08/22 03:51:45 jsg Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 21 2023 $
+.Dd $Mdocdate: August 22 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -4124,7 +4124,7 @@ Holds the output of
 .Xr cksum 1 ,
 using
 .Xr sha256 1
-for the port's ${DISTFILES*}, ${SUPDISFILES*} and ${PATCHFILES*},
+for the port's ${DISTFILES*}, ${SUPDISTFILES*} and ${PATCHFILES*},
 as well as the sizes of these files.
 .It Pa ${DISTDIR}/${CHECKSUMFILES}
 Cache of normal distribution files for a given port.
